...
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_arrow_back"
            android:id="@+id/back_btn">

        </Button>
    </LinearLayout>

    <TextView
        android:id="@+id/msgResponse"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:textAlignment="center"
...
                android:layout_height="wrap_content"
                android:text="First Name:"
                android:textSize="20dp"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/create_first_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Enter First Name"
                android:textSize="15sp" />

        </LinearLayout>
...
                android:layout_height="wrap_content"
                android:text="Last Name:"
                android:textSize="20dp"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/create_last_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Enter Last Name"
                android:textSize="15sp" />

        </LinearLayout>
...
                android:text="Username: "
                android:textSize="20dp"
                android:textColor="#000000">
            </TextView>

            <EditText
                android:id="@+id/create_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Enter Username"
                android:textSize="15sp">
            </EditText>

...
                android:text="Password: "
                android:textSize="20dp"
                android:textColor="#000000">
            </TextView>

            <EditText
                android:id="@+id/create_password"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="50dp"
                android:hint="Enter Password Here"
                android:textSize="15sp">
            </EditText>
...
            android:text="  Confirm:  "
            android:textSize="20dp"
            android:textColor="#000000">
        </TextView>

        <EditText
            android:id="@+id/create_password_confirm"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="50dp"
            android:hint="Confirm Password"
            android:textSize="15sp">
        </EditText>
...
            android:layout_height="wrap_content"
            android:text="Create Tutor Account"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <Button
        android:id="@+id/create_account_btn"
        android:background="@drawable/btn_primary"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="109dp"
        android:gravity="center"
...
