...
                        android:layout_height="wrap_content"
                        android:text="Username: "
                        android:textColor="#000000"
                        android:textSize="20dp" />

                    <EditText
                        android:id="@+id/login_username_edt"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:hint="Enter Username Here" />
                </LinearLayout>

                <LinearLayout
...
                        android:layout_height="wrap_content"
                        android:text="Password: "
                        android:textColor="#000000"
                        android:textSize="20dp" />

                    <EditText
                        android:id="@+id/login_password_edt"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:hint="Enter Password Here"
                        android:inputType="textPassword" />
                </LinearLayout>

                <Button
                    android:id="@+id/forgotp_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/clear_btn"
                    android:paddingLeft="15dp"
                    android:text="Forgot Password?"
                    android:textColor="#A1A1FF"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="45dp"
                    android:background="@drawable/btn_primary"
                    android:text="Login"
...
                        android:layout_height="wrap_content"
                        android:text="New to Campus Connect?"
                        android:textColor="#ffffff"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/signup_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/clear_btn"
                        android:lines="1"
                        android:text="Create Account"
                        android:textColor="#A1A1FF"
...
